# dfactor-llm-ultimatum-game

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
analysis/: causal_decomposition_analysis.ipynb  gpt_comparisons.ipynb  nlp_exploratory_analysis.ipynb  nlp_exploratory_analysis_v2.ipynb  paper_core_analysis.ipynb  strong_prompt_analysis.ipynb  temperature_analysis.ipynb
experiment/: README.md  _proposer_dfactor.ipynb  _proposer_dfactor.txt  _proposer_dfactor_strong.txt  _proposer_raw.ipynb  _proposer_raw.txt  _proposer_ultimatum_questions.csv  _responder_dfactor.ipynb  _responder_dfactor.txt  _responder_dfactor_strong.txt  _responder_raw.ipynb  _responder_raw.txt  d_traits.csv  d_traits_strong_proposer.csv  d_traits_strong_responder.csv  run_batch_wrapper.py
