[project]
name = "dfactor-llm-ultimatum-game"
version = "1.0.0"
description = "Reproduction package for D-Factor and the Ultimatum Game in Large Language Models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Vinícius Ferraz", email = "visferraz@gmail.com" },
    { name = "Tamas Olah" },
    { name = "Ratin Sazedul" },
    { name = "Robert Schmidt" },
    { name = "Christiane Schwieren" },
]
keywords = ["llm", "personality", "d-factor", "ultimatum-game", "behavioral-economics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "adjustText>=0.8",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/vferraz/dfactor-llm-ultimatum-game"
Repository = "https://github.com/vferraz/dfactor-llm-ultimatum-game"
"Bug Tracker" = "https://github.com/vferraz/dfactor-llm-ultimatum-game/issues"
"OSF Data" = "https://osf.io/rvph8/overview"
"Paper (DOI)" = "https://doi.org/10.1016/j.chbah.2026.100281"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.uv]
dev-dependencies = []
